[package]
name = "combined"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
serde_json = "1.0"
actix-web = "4.4"
tokio = { version = "1.0", features = ["full", "sync"] }
futures = "0.3"
async-tungstenite = { version = "0.23", features = ["tokio-runtime", "tokio-native-tls"] }
chrono = { version = "0.4", features = ["serde"] }
solana-client = "1.18"
solana-sdk = "1.18"
spl-token = "3.5"
tokio-stream = "0.1"
prettytable-rs = "0.10"

actix-cors = "0.7"